--- a/Styles/Colors.xaml
+++ b/Styles/Colors.xaml
@@ -3,7 +3,8 @@
                     xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="options"
-                    xmlns:local="clr-namespace:VpdbAgent">
+                    xmlns:local="clr-namespace:VpdbAgent"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <Color x:Key="InputTextColor">#80ffffff</Color>
     <Color x:Key="LabelTextColor">#40ffffff</Color>
@@ -20,5 +21,10 @@
     <SolidColorBrush x:Key="LabelTextBrush" Color="{StaticResource LabelTextColor}" options:Freeze="True" />
     <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource WhiteColor}" options:Freeze="True" />
     <SolidColorBrush x:Key="WhiterBrush" Color="{StaticResource WhiterColor}" options:Freeze="True" />
+    <SolidColorBrush x:Key="ScrollbarBrush" Color="#40ffffff" options:Freeze="True" />
+    <SolidColorBrush x:Key="ScrollbarHoverBrush" Color="#60ffffff" options:Freeze="True" />
+    
+	<SolidColorBrush x:Key="DarkBrush" Color="#40ffffff" options:Freeze="True" />
+    <SolidColorBrush x:Key="LightBrush" Color="#80ffffff" options:Freeze="True" />
 
 </ResourceDictionary>
