--- a/views/SettingsView.xaml
+++ b/views/SettingsView.xaml
@@ -3,54 +3,66 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:VpdbAgent.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="320" d:DesignWidth="400">
+      d:DesignHeight="320" d:DesignWidth="800">
 
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Vertical">
+		<ScrollViewer>
+            <StackPanel Grid.Row="0" Orientation="Vertical" Grid.ColumnSpan="2">
 
-            <!-- API KEY -->
-            <Label Content="API Key" HorizontalAlignment="Left" />
-            <TextBox x:Name="ApiKey" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" />
+                <Label Content="PinballX" Style="{StaticResource Header1}" Margin="0,-10,0,0"/>
+                <Separator/>
 
-            <!-- PINBALLX FOLDER -->
-            <Label Content="PinballX Folder" HorizontalAlignment="Left" />
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="10"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <Label x:Name="PbxFolder" Grid.Column="0"/>
-                <Button x:Name="PinballXFolderButton" Content="CHOOSE FOLDER" Grid.Column="2" Click="PinballXFolderButton_Click" Style="{StaticResource ButtonSolidLarge}" />
-            </Grid>
+                <!-- PINBALLX FOLDER -->
+                <Label Content="PinballX Folder" HorizontalAlignment="Left" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="10"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Style="{StaticResource Label}" Margin="15,0,0,0">
+                        <TextBlock.Inlines>
+                            <Run x:Name="PbxFolderLabel" Text="Location:" />
+                            <Run x:Name="PbxFolder" FontWeight="Bold" Foreground="{StaticResource InputTextColorBrush}"/>
+                        </TextBlock.Inlines>
+                    </TextBlock>
+                    <Button x:Name="PinballXFolderButton" Content="CHOOSE FOLDER" Grid.Column="2" Style="{StaticResource ButtonSolidLarge}" />
+                </Grid>
 
-            <!-- [X] Advanced Options -->
-            <CheckBox x:Name="ShowAdvancedOptions" Content="Show Advanced Options" FontSize="18" Margin="0,20,0,0" Checked="ShowAdvancedOptions_Checked" Unchecked="ShowAdvancedOptions_Checked"/>
+                <Label Content="VPDB Connection" Style="{StaticResource Header1}" Margin="0,20,0,0"/>
+                <Separator/>
 
-            <!-- API Endpoint -->
-            <Label x:Name="ApiEndpointLabel" Content="VPDB API Endpoint" HorizontalAlignment="Left" Margin="0,20,0,0"/>
-            <TextBox x:Name="Endpoint" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" />
+                <!-- API KEY -->
+                <Label Content="API Key" HorizontalAlignment="Left" />
+                <TextBox x:Name="ApiKey" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" />
 
-            <!-- HTTP Basic Auth -->
-            <Label x:Name="BasicAuthLabel" Content="HTTP Basic Auth" Margin="0,10,0,0" HorizontalAlignment="Left" />
-            <Grid x:Name="BasicAuth" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="10"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBox x:Name="AuthUser" Height="23" Grid.Column="0"/>
-                <PasswordBox x:Name="AuthPass"  Height="23" Grid.Column="2"/>
-            </Grid>
+                <!-- [X] Advanced Options -->
+                <CheckBox x:Name="ShowAdvancedOptions" Content="Show Advanced Options" FontSize="18" Margin="0,20,0,0" Checked="ShowAdvancedOptions_Checked" Unchecked="ShowAdvancedOptions_Checked"/>
 
-        </StackPanel>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                <!-- API Endpoint -->
+                <Label x:Name="ApiEndpointLabel" Content="VPDB API Endpoint" HorizontalAlignment="Left" Margin="0,20,0,0"/>
+                <TextBox x:Name="Endpoint" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" />
+
+                <!-- HTTP Basic Auth -->
+                <Label x:Name="BasicAuthLabel" Content="HTTP Basic Auth" Margin="0,10,0,0" HorizontalAlignment="Left" />
+                <Grid x:Name="BasicAuth" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="10"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="AuthUser" Height="23" Grid.Column="0"/>
+                    <PasswordBox x:Name="AuthPass"  Height="23" Grid.Column="2"/>
+                </Grid>
+
+            </StackPanel>
+        </ScrollViewer>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="1">
             <Button x:Name="CancelButton" Content="CANCEL" Margin="0,0,10,0" Style="{StaticResource ButtonLineLarge}"/>
             <Button x:Name="SaveButton" Content="SAVE" Style="{StaticResource ButtonSolidPrimaryLarge}"/>
         </StackPanel>
