--- a/views/Games/MainGameView.xaml
+++ b/views/Games/MainGameView.xaml
@@ -1,23 +1,24 @@
-﻿<UserControl x:Class="VpdbAgent.Views.MainGameView"
+﻿<UserControl x:Class="VpdbAgent.Views.Games.MainGameView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:c="clr-namespace:VpdbAgent.Controls"
-             xmlns:tc="clr-namespace:VpdbAgent.ViewModels.TypeConverters"
              xmlns:vm="clr-namespace:VpdbAgent.ViewModels"
              xmlns:rx="clr-namespace:ReactiveUI;assembly=ReactiveUI"
              xmlns:loadin="clr-namespace:LoadingIndicators.WPF;assembly=LoadingIndicators.WPF"
+             xmlns:typeConverters="clr-namespace:VpdbAgent.Common.TypeConverters"
+             xmlns:games="clr-namespace:VpdbAgent.ViewModels.Games"
              mc:Ignorable="d" 
              Padding="20,0,0,0"
              d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance Type=vm:MainGameViewModel}">
+             d:DataContext="{d:DesignInstance Type=games:MainGameViewModel}">
 
     <UserControl.Resources>
-        <tc:BooleanToVisibilityConverter x:Key="TrueToVisible" True="Visible" False="Collapsed" />
-        <tc:BooleanToVisibilityConverter x:Key="TrueToCollapsed" True="Collapsed" False="Visible" />
-        <tc:BooleanToBrushConverter x:Key="FalseToRed" True="Transparent" False="DarkRed" />
-        <tc:BooleanToBrushConverter x:Key="TrueToPrimary" True="{StaticResource PrimaryColorBrush}" False="{StaticResource LabelTextBrush}" />
+        <typeConverters:BooleanToVisibilityConverter x:Key="TrueToVisible" True="Visible" False="Collapsed" />
+        <typeConverters:BooleanToVisibilityConverter x:Key="TrueToCollapsed" True="Collapsed" False="Visible" />
+        <typeConverters:BooleanToBrushConverter x:Key="FalseToRed" True="Transparent" False="DarkRed" />
+        <typeConverters:BooleanToBrushConverter x:Key="TrueToPrimary" True="{StaticResource PrimaryColorBrush}" False="{StaticResource LabelTextBrush}" />
     </UserControl.Resources>
 
     <Grid>
