--- a/views/Games/MainReleaseResultsItemView.xaml
+++ b/views/Games/MainReleaseResultsItemView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VpdbAgent.Views.MainReleaseResultsItemView"
+﻿<UserControl x:Class="VpdbAgent.Views.Games.MainReleaseResultsItemView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
