--- a/views/Games/GameItemResultsView.xaml
+++ b/views/Games/GameItemResultsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VpdbAgent.Views.Games.MainReleaseResultsView"
+﻿<UserControl x:Class="VpdbAgent.Views.Games.GameItemResultsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
