--- a/views/Games/GameItemView.xaml
+++ b/views/Games/GameItemView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VpdbAgent.Views.Games.MainGameView"
+﻿<UserControl x:Class="VpdbAgent.Views.Games.GameItemView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,7 +12,7 @@
              mc:Ignorable="d" 
              Padding="20,0,0,0"
              d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance Type=games:MainGameViewModel}">
+             d:DataContext="{d:DesignInstance Type=games:GameItemViewModel}">
 
     <UserControl.Resources>
         <typeConverters:BooleanToVisibilityConverter x:Key="TrueToVisible" True="Visible" False="Collapsed" />
