--- a/views/Games/GamesView.xaml
+++ b/views/Games/GamesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VpdbAgent.Views.Games.MainView"
+﻿<UserControl x:Class="VpdbAgent.Views.Games.GamesView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
