--- a/Styles/Theme.xaml
+++ b/Styles/Theme.xaml
@@ -26,6 +26,12 @@
         <Setter Property="Margin" Value="5,0,0,20" />
         <Setter Property="Background" Value="{StaticResource DarkBrush}" />
     </Style>
+	
+    <!-- TAB ITEM -->
+    <Style TargetType="{x:Type TabItem}" BasedOn="{StaticResource MetroTabItem}">
+        <Setter Property="controls:ControlsHelper.HeaderFontSize" Value="32" />
+        <Setter Property="controls:ControlsHelper.HeaderFontWeight" Value="Light" />
+    </Style>
 
     <!-- RESIZE GRIP -->
     <Style TargetType="{x:Type ResizeGrip}">
