--- a/views/Games/GamesView.xaml
+++ b/views/Games/GamesView.xaml
@@ -38,7 +38,7 @@
         <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Width="3" Background="Transparent"/>
 
         <!-- RIGHT PANEL -->
-        <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}" Grid.ColumnSpan="2">
+        <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}">
 
             <ItemsControl x:Name="GameList"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
