--- a/views/Games/GameResultItemView.xaml
+++ b/views/Games/GameResultItemView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VpdbAgent.Views.Games.GameItemResultsItemView"
+﻿<UserControl x:Class="VpdbAgent.Views.Games.GameResultItemView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
