--- a/views/Downloads/DownloadItemView.xaml
+++ b/views/Downloads/DownloadItemView.xaml
@@ -8,10 +8,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="150" d:DesignWidth="900">
     <Grid Margin="0,5,10,5">
-		
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="60" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="48*" />
+            <ColumnDefinition Width="325*"/>
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -24,7 +25,7 @@
         <c:UrlImage x:Name="Thumb" Grid.Column="0" Grid.Row="0" Width="50" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
         <!-- data -->
-        <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+        <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical" Grid.ColumnSpan="2">
             <Label Padding="0">
                 <TextBlock x:Name="GameName" Text="Medieval Madness (Williams 1997)" TextTrimming="CharacterEllipsis" />
             </Label>
@@ -34,7 +35,7 @@
         </StackPanel>
 
         <!-- right side stats -->
-        <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+        <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
             <Label Padding="0" x:Name="Speed" HorizontalAlignment="Right" Content="1.43 MB/s" />
             <TextBlock Style="{StaticResource Label}" HorizontalAlignment="Right">
                 <TextBlock.Inlines>
@@ -44,8 +45,8 @@
             </TextBlock>
         </StackPanel>
 
-        <ProgressBar Style="{StaticResource BlehProgressBar}" Grid.ColumnSpan="3" Grid.Row="1" Grid.Column="0" Margin="0,10,0,10" IsIndeterminate="False" Value="10"/>
-        <Separator Grid.ColumnSpan="3" Grid.Row="2" Grid.Column="0"/>
+        <ProgressBar Style="{StaticResource BlehProgressBar}" Grid.ColumnSpan="4" Grid.Row="1" Grid.Column="0" Margin="0,11,0,10" IsIndeterminate="False" Value="10"/>
+        <Separator Grid.ColumnSpan="4" Grid.Row="2" Grid.Column="0"/>
 
     </Grid>
 </UserControl>
