--- a/views/Downloads/DownloadsView.xaml
+++ b/views/Downloads/DownloadsView.xaml
@@ -23,8 +23,8 @@
         <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Width="3" Background="Transparent"/>
 
         <!-- RIGHT PANEL -->
-        <StackPanel Grid.Column="2" Background="{StaticResource WhiterBrush}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-            <ItemsControl x:Name="Downloads" VerticalContentAlignment="Stretch" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" VerticalAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+        <StackPanel Grid.Column="2" Background="{StaticResource WhiterBrush}">
+            <ItemsControl x:Name="Downloads" Padding="10" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
         </StackPanel>
     </Grid>
 </UserControl>
