Cleanup and documentation.

--- a/Styles/Colors.xaml
+++ b/Styles/Colors.xaml
@@ -13,6 +13,7 @@
     <Color x:Key="PrimaryColor85">#daec843d</Color>
     <Color x:Key="WhiteColor">#ff282828</Color>
     <Color x:Key="WhiterColor">#ff181818</Color>
+    <Color x:Key="Green">#007F0E</Color>
 
     <SolidColorBrush x:Key="PrimaryColorBrush" Color="{StaticResource PrimaryColor}" options:Freeze="True" />
     <SolidColorBrush x:Key="PrimaryColor85Brush" Color="{StaticResource PrimaryColor85}" options:Freeze="True" />
@@ -24,6 +25,7 @@
     <SolidColorBrush x:Key="ScrollbarBrush" Color="#40ffffff" options:Freeze="True" />
     <SolidColorBrush x:Key="ScrollbarHoverBrush" Color="#60ffffff" options:Freeze="True" />
     <SolidColorBrush x:Key="DarkBackgroundBrush" Color="Black" Opacity="0.35" options:Freeze="True" />
+    <SolidColorBrush x:Key="DarkGreenBrush" Color="{StaticResource Green}" Opacity="0.3" options:Freeze="True" />
 
     <SolidColorBrush x:Key="DarkBrush" Color="#40ffffff" options:Freeze="True" />
     <SolidColorBrush x:Key="LightBrush" Color="#80ffffff" options:Freeze="True" />
