--- a/views/Games/GamesView.xaml
+++ b/views/Games/GamesView.xaml
@@ -3,12 +3,9 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:rx="clr-namespace:ReactiveUI;assembly=ReactiveUI"
-      xmlns:dc="clr-namespace:Devart.Controls"
-      xmlns:vm="clr-namespace:VpdbAgent.ViewModels.Games"
-      xmlns:v="clr-namespace:VpdbAgent.Views.Games"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="900">
+      d:DesignHeight="300"
+	  d:DesignWidth="900">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -36,29 +33,7 @@
         <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Width="3" Background="Transparent"/>
 
         <!-- RIGHT PANEL -->
-        <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}">
+        <ItemsControl x:Name="GameList" Grid.Column="2" Style="{StaticResource SmoothPanel}"/>
 
-            <ItemsControl x:Name="GameList"
-                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                  ScrollViewer.VerticalScrollBarVisibility="Auto">
-                <ItemsControl.Template>
-                    <ControlTemplate>
-                        <ScrollViewer KeyboardNavigation.IsTabStop="True" CanContentScroll="True">
-                            <ItemsPresenter />
-                        </ScrollViewer>
-                    </ControlTemplate>
-                </ItemsControl.Template>
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <dc:SmoothPanel>
-                            <dc:SmoothPanel.Templates>
-                                <dc:SmoothPanelTemplate ViewModel="{x:Type vm:GameItemViewModel}" View="{x:Type v:GameItemView}" />
-                            </dc:SmoothPanel.Templates>
-                        </dc:SmoothPanel>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-            </ItemsControl>
-
-        </Grid>
     </Grid>
 </UserControl>
